# FastVox

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  任务详细设计.md
app/: main.py
app/api/: admin.py  middleware.py  stats.py  tts.py  voice.py  wechat.py
app/auth/: manager.py  schemas.py
app/core/: audio_encoder.py  platform_compat.py  shm_manager.py  slot_manager.py  uds_protocol.py  voice_utils.py  worker_pool.py
app/db/: engine.py
app/inference/: text_splitter.py  tts_engine.py
config/: settings.py
deploy/docker/: Dockerfile  docker-compose.yml
deploy/linux/: fastvox.service
docx/: api_docs_miniprogram.md  任务详细设计.md  架构设计概要.md  测试指南.md
scripts/: cleanup_shm.sh  restart.sh  restart_daemon.sh  setup_conda.sh  start.sh  start_daemon.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: client.ts
web/src/components/layout/: AppLayout.vue
web/src/components/ui/: BaseButton.vue
web/src/router/: index.ts
web/src/styles/: variables.css
web/src/views/: LoginView.vue  SettingsView.vue  StatsView.vue  SynthesisView.vue  UsersView.vue  VoiceView.vue
