[project]
name = "fastvox"
version = "0.1.0"
description = "A high-performance TTS service using sherpa-onnx and zipvoice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sherpa-onnx>=1.12.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "av>=12.0.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "psutil>=5.9.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
